# locate-anything-4bit

./: .gitignore  LICENSE  LICENSE_MODEL  README.md  detect_person.py  locateanything_worker.py  pyproject.toml  run_4bit.py  test_model.py  visualize_4bit.py  visualize_detection.py
deepspeed_configs/: zero_stage2_config.json
document/: DATA_PREPARATION.md  RESULTS.md  STREAMING_PACKING.md  TRAINING.md
eaglevl/: __init__.py  conversation.py  dist_utils.py
eaglevl/model/: __init__.py
eaglevl/model/locany/: __init__.py  configuration_locateanything.py  configuration_qwen2.py  mask_magi_utils.py  mask_sdpa_utils.py  modeling_locateanything.py
eaglevl/model/moon_vit/: __init__.py  modeling_vit.py
eaglevl/patch/: __init__.py  fp8_gemm.py  fused_monkey_patch.py  llm_rmsnorm_monkey_patch.py  packing_attention.py  pad_data_collator.py  train_dataloader_patch.py  train_sampler_patch.py  unsloth_checkpoint.py
eaglevl/patch/fused_ops/: fused_rms_norm.py  fused_rotary_pos_emb.py  fused_swiglu.py  utils.py
eaglevl/sp_utils/: __init__.py  attention.py  globals.py  input_utils.py  mcore_ring.py
eaglevl/train/: arguments.py  augmentation.py  constants.py  dataset.py  liger_loss_weight_ops.py  locany_finetune_magi_stream.py  tools.py  trainer_monkey_patch.py
eaglevl/train/fastseek/: __init__.py  draw_marker.py  fastseek.py  matroska.py  (+2 more)
evaluation/: README.md  inference_compat.py  inference_detection_ddp.py  inference_grounding_ddp.py  inference_sspro_ddp.py
evaluation/metrics/: analyze_speed.py  coco_lvis_metric.py  other_metric.py  sspro_metric.py
evaluation/scripts/: eval_coco.sh  eval_grounding.sh  eval_lvis.sh  eval_sspro.sh
evaluation/utils/: convert_coco_lvis_to_standard_format.py  merge_pred.py
shell/: locate-anything-streaming.sh
(+4 files in other folders)
